More refactoring: feature_blocks and get_next_design

--- a/examples/tf8_demo.ipynb
+++ b/examples/tf8_demo.ipynb
@@ -143,7 +143,7 @@
    "source": [
     "## Modeling in pyroed\n",
     "\n",
-    "Specify the design space via SCHEMA, CONSTRAINTS, FEATURES, and GIBBS_BLOCKS."
+    "Specify the design space via SCHEMA, CONSTRAINTS, FEATURE_BLOCKS, and GIBBS_BLOCKS."
    ]
   },
   {
@@ -163,7 +163,7 @@
     "pairs = [list(ns) for ns in zip(SCHEMA, list(SCHEMA)[1:])]\n",
     "triples = [list(ns) for ns in zip(SCHEMA, list(SCHEMA)[1:], list(SCHEMA)[2:])]\n",
     "\n",
-    "FEATURES = singletons + pairs\n",
+    "FEATURE_BLOCKS = singletons + pairs\n",
     "GIBBS_BLOCKS = triples"
    ]
   },
@@ -230,7 +230,7 @@
     "    return thompson_sample(\n",
     "        SCHEMA,\n",
     "        CONSTRAINTS,\n",
-    "        FEATURES,\n",
+    "        FEATURE_BLOCKS,\n",
     "        GIBBS_BLOCKS,\n",
     "        experiment,\n",
     "        inference=\"svi\",\n",
