--- a/examples/tf8_demo.ipynb
+++ b/examples/tf8_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "45657b0a",
+   "id": "e08d6802",
    "metadata": {},
    "source": [
     "# Predicting transcription factor binding affinity"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a0547ae8",
+   "id": "554c3af7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,28 +32,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "0728698e",
+   "cell_type": "markdown",
+   "id": "1f74ad5b",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Transcription factor data\n",
+    "\n",
+    "We consider data from [Survey of variation in human transcription factors reveals prevalent DNA binding changes](https://www.science.org/doi/abs/10.1126/science.aad2257),\n",
+    "in particular for the PBX4 transcription factor.\n",
+    "The dataset consists of measurements of the binding affinities of PBX4 to all\n",
+    "possible DNA sequences of length 8, i.e. for a total of $4^8 = 65536$ sequences.\n",
+    "Since this dataset is exhaustive we can use it to do a semi-synthetic experiment in which\n",
+    "we first \"measure\" a small number of binding affinities and then do additional \"experiments\" in multiple rounds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "89de451b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'load_tf_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-7fa754ef041d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_tf_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'load_tf_data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "data = load_tf_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a2d5cfff",
+   "execution_count": 2,
+   "id": "aaee1008",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sequences torch.int64 (65792, 8)\n",
-      "batch_id torch.int64 (65792,)\n",
-      "response torch.float32 (65792,)\n"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-9f2974ef0dc7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{k} {v.dtype} {tuple(v.shape)}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
      ]
     }
    ],
@@ -64,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "509fa52a",
+   "id": "df9a2c09",
    "metadata": {},
    "source": [
     "Sequences take values 0,1,2,3 corresponding to nucleotides."
@@ -73,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "94a16c7a",
+   "id": "e663d3f4",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13a52636",
+   "id": "027810aa",
    "metadata": {},
    "source": [
     "The response variable appears to be approximately Gaussian distributed."
@@ -102,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b4c1d699",
+   "id": "8023f16e",
    "metadata": {},
    "outputs": [
     {
@@ -133,12 +162,13 @@
     }
    ],
    "source": [
-    "plt.hist(data[\"response\"].numpy(), bins=20)"
+    "plt.hist(data[\"response\"].numpy(), bins=20)\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e761e6e6",
+   "id": "1354452d",
    "metadata": {},
    "source": [
     "## Modeling in pyroed\n",
@@ -149,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dc7764a1",
+   "id": "901aa0f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dc16c6b",
+   "id": "4b00b234",
    "metadata": {},
    "source": [
     "Let's start with a random subsample of data."
@@ -178,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5145f2b8",
+   "id": "d5413960",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b89f1316",
+   "id": "819b8d82",
    "metadata": {},
    "source": [
     "Each step of the OED process we'll test on new data. Let's make a helper to simulate lab work."
@@ -208,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "be80b280",
+   "id": "195d45d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "101601df",
+   "id": "9d60977f",
    "metadata": {},
    "source": [
     "Initialize our sequence of experiments:"
@@ -251,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "18485f5d",
+   "id": "6c69bbae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7b81ab3",
+   "id": "cf72260a",
    "metadata": {},
    "source": [
     "Let's start with a single loop of active learning:"
@@ -270,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8f4c8739",
+   "id": "4b3937cd",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfa26943",
+   "id": "eab52db4",
    "metadata": {},
    "source": [
     "Let's run multiple loops, say 10 more loops."
@@ -316,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "51581ba6",
+   "id": "5e03ea18",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64f0f751",
+   "id": "d2c07fd3",
    "metadata": {},
    "source": [
     "How did the response improve over time?"
@@ -386,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c7b4d686",
+   "id": "a6c9069d",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2a12b41",
+   "id": "423bdf0e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -418,7 +448,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -432,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
